Additional corrections to TempleBuilder and Position